# polymap

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
benches/: polymap.rs
implementors/core/clone/: trait.Clone.js
implementors/core/default/: trait.Default.js
implementors/core/iter/: trait.Iterator.js
implementors/core/ops/: trait.Drop.js
polymap/: index.html  stability.html  stability.json  struct.Keys.html  struct.PolyMap.html
src/: lib.rs  polymap.rs  typemap.rs
src/polymap/: lib.rs.html
