[package]
name = "polymap"
description = "A map containing varying types of value"

documentation = "https://docs.rs/polymap/"
homepage = "https://github.com/murarth/polymap"
repository = "https://github.com/murarth/polymap"

keywords = ["any", "container", "map"]
license = "MIT/Apache-2.0"
readme = "README.md"

version = "0.3.0"
authors = ["Murarth <murarth@gmail.com>"]

[dev-dependencies]
rand = "0.3"
